Web Viewer Changelog

Current Version : 0.8.4

*** 0.8.4 ***

Handle more complex <br /> tags
Added Read View to sub-options menu (For viewing pages without selectable elements or with widely spaced selectable elements.
Parse file:// out of links so they display properly in local links

*** 0.8.3 ***

Fixed an autoforms bug which caused infinite loops when form failed and then redirected back to the same form.

*** 0.8.2 ***

Encode log entries
Remove xbmcgui.lock()/xbmcgui.unlock() to get rid of the annoying xbmc.log messages :)
Fixed bug with viewing images
Fixed a bug causing webviewer to lock on nonsense urls
Fixed bug with link list failing to display link images with relative URLs
Fixed a bug with improperly identifying links URLs with imbedded image URLs as being links to images
Improved message/error logging
Added fanart.jpg:   (anyone wants to make something better, feel free =] )
  Made with some free images - attribution: 
    Image: Danilo Rizzuti / FreeDigitalPhotos.net
    Image: suphakit73 / FreeDigitalPhotos.net

*** 0.8.1 ***

Fixed bug causing page load to fail when launched as a skin shortcut

*** 0.8.0 ***

Eden commit - no changes

*** 0.7.9 ***

Added 'Exit Web Viewer' option to simple controls

*** 0.7.8 ***

New icon courtesy of freezy
Added autofill option for autoforms
Added autosubmit option for autoforms

*** 0.7.7 ***

Made compatible with Boxee

*** 0.7.6 ***

Added settings option to prefill 'Goto URL' with current URL
Right clicking with mouse on buttons now brings up context menu, instead of closing window
Added 'Search Google' to context menu and Google button
Added dialog when links are clicked that cannot be followed.
Bug Fix: Scrolling through links list was sometimes selecting wrong page elements
Added 'Search Page' to context menu
Changed 'Settings' to 'Options' on context menu
Changed 'Preferences' to 'Settings' under 'Options' on context menu
Added 'View' source to 'Options' on context menu

*** 0.7.5 ***
	