@@ -7,6 +7,7 @@ Current Version : 0.8.4
 Handle more complex <br /> tags
 Added Read View to sub-options menu (For viewing pages without selectable elements or with widely spaced selectable elements.
 Parse file:// out of links so they display properly in local links
+Fix for pages without elements
 
 *** 0.8.3 ***
 
